Used bug fixed version of javascript lexer

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-javascript_lexer = "0.1"
+javascript_lexer = { git = "https://github.com/Liby99/javascript-lexer.git" }
